# sdk-python

./: .dockerignore  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATION.md  Dockerfile  LICENSE.txt  Makefile  NOTICE  README.md  SECURITY.md  THIRDPARTYREADME.txt  THIRD_PARTY_LICENSES.txt  config.example.yaml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: _integration.yml  _lint.yml  _precommit.yml  _release.yml  _secrets.yml  _test.yml  ci.yml  docs.yml  workbench.yml
docs/: FEATURES.md  capabilities.md  index.md  legal.md  workbench.md
docs/api/: agent.md  checkpointers.md  core.md  deepagent.md  evaluation.md  events.md  hooks.md  integrations.md  loop.md  memory.md  models.md  multiagent.md  observability.md  playbooks.md  providers.md  rag.md  reasoning.md  router.md  server.md  skills.md  streaming.md  termination.md  tools.md
docs/concepts/: agent-loop.md  agent.md  checkpointers.md  conversation-management.md  deepagent.md  errors.md  evaluation.md  events.md  executors.md  graph-streaming.md  gsar.md  hooks.md  idempotency.md  interrupts.md  mcp.md  memory-manager.md  models.md  multi-agent.md  multi-modal-providers.md  observability.md  playbooks.md  prompts.md  rag.md  reasoning.md  retry.md  router.md  safety.md  server.md  skills.md  sse-events.md  state.md  streaming.md  structured-output.md  termination.md  tools.md
docs/how-to/: custom-checkpointer.md  custom-tools.md  deploy.md  environment-variables.md  litellm-gateway.md  persist-conversations.md  quickstart.md
docs/internal/: AGENTIC_LOOP_ROADMAP.md  FRAMEWORK_COMPARISON.md  MYTHOS.md  ROADMAP_GAPS.md
docs/javascripts/: header-home.js  notebook-filter.js  sidebar-filter.js
docs/market/: 2026-06-15-market-brief.md  2026-06-15_market_brief.md
docs/notebooks/: index.md  notebook_06_basic_agent.md  notebook_07_agent_with_tools.md  notebook_08_agent_memory.md  notebook_11_agent_streaming.md  notebook_12_agent_hooks.md  notebook_13_sse_streaming.md  notebook_14_hooks_advanced.md  notebook_15_termination.md  notebook_16_basic_graph.md  notebook_17_conditional_routing.md  notebook_18_state_reducers.md  notebook_19_human_in_the_loop.md  notebook_20_advanced_patterns.md  notebook_21_composition.md  notebook_22_graph_advanced.md  notebook_23_functional_api.md  notebook_24_swarm_multiagent.md  notebook_25_agent_handoff.md  notebook_26_orchestrator_pattern.md  notebook_27_specialist_agents.md  notebook_28_a2a_protocol.md  notebook_29_deepagent.md  notebook_30_map_reduce_code_review.md  notebook_31_supervisor_critic_loop.md  notebook_32_debate_with_judge.md  notebook_33_multiagent_human_in_loop.md  notebook_34_emergent_routing.md  notebook_35_structured_output.md  notebook_36_reasoning_patterns.md  notebook_37_gsar_typed_grounding.md  notebook_38_rag_basics.md  notebook_39_rag_providers.md  notebook_40_rag_agents.md  notebook_45_mcp_integration.md  notebook_46_playbooks.md  notebook_47_plugins.md  notebook_48_skills.md  notebook_49_steering.md  notebook_50_guardrails_security.md  (+19 more)
docs/stylesheets/: tulip.css
examples/: .env.example  README.md  agent_gist.py  can_you_make_it_go_rogue.py  checkpointer_examples.py  coding_assistant.py  complex_agent.py  config.py  docker-compose.yaml  fastmcp_server.py  governed_soc_action.py  grounding_ablation.py  notebook_06_basic_agent.py  notebook_07_agent_with_tools.py  notebook_08_agent_memory.py  notebook_11_agent_streaming.py  notebook_12_agent_hooks.py  notebook_13_sse_streaming.py  notebook_14_hooks_advanced.py  notebook_15_termination.py  notebook_16_basic_graph.py  notebook_17_conditional_routing.py  notebook_18_state_reducers.py  notebook_19_human_in_the_loop.py  notebook_20_advanced_patterns.py  notebook_21_composition.py  notebook_22_graph_advanced.py  notebook_23_functional_api.py  notebook_24_swarm_multiagent.py  notebook_25_agent_handoff.py  notebook_26_orchestrator_pattern.py  notebook_27_specialist_agents.py  notebook_28_a2a_protocol.py  notebook_29_deepagent.py  notebook_30_map_reduce_code_review.py  notebook_31_supervisor_critic_loop.py  notebook_32_debate_with_judge.py  notebook_33_multiagent_human_in_loop.py  notebook_34_emergent_routing.py  notebook_35_structured_output.py  (+53 more)
examples/integrations/: README.md  __init__.py  gpu_probe_dispatch.py  remote_timing.py  siem_query.py  threat_intel.py
examples/litellm-gateway/: README.md  config.yaml  docker-compose.yml  helm-values.yaml
examples/playbooks/: cloud_posture_audit.yaml  nist_800_61_ir.yaml  phishing_triage.yaml  ransomware_containment.yaml
examples/projects/a2a-mesh/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
examples/projects/a2a-mesh/src/a2a_mesh/: __init__.py  _model.py  finance.py  orchestrator.py  research.py  soc_triage.py  threat_intel.py
examples/projects/a2a-mesh/tests/: __init__.py  test_mesh.py
examples/projects/a2a-mesh/web/: .gitignore  README.md  index.html  package.json  vite.config.ts
examples/projects/a2a-mesh/web/src/: App.tsx  api.ts  main.tsx  types.ts
examples/projects/a2a-mesh/web/src/styles/: redwood.css  tulip.css
examples/proposals/: README.md  proposal_ci_guardrail_gate.py  proposal_model_fingerprint_e2e.py  proposal_rag_injection_probe.py  proposal_soc_alert_triage.py  proposal_supply_chain_ai_scan.py
examples/scenarios/: README.md  cascading_failures.py  code_execution.py  excessive_agency.py  improper_output_handling.py  inter_agent_comms.py  memory_poisoning.py  misinformation_trust.py  model_extraction.py  prompt_injection.py  rogue_agent.py  run_all.py  sensitive_disclosure.py  supply_chain.py  tool_abuse.py
overrides/: main.html
overrides/partials/: source.html
scripts/: coverage_baseline.json  coverage_ratchet.py  demo_tulip_against_local_services.py  gen_notebook_pages.py  probe_public_claims.py  run_notebooks.py  start_local_test_services.sh
src/tulip/: __init__.py  _sync.py
tests/: __init__.py  _safe_math.py
workbench/: .gitignore  Dockerfile  Makefile  README.md  SDK-ERGONOMICS.md
(+544 files in other folders)
